[NIFI-2180] Fix settings shell table text alignment for run status

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/summary.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/summary.css
@@ -61,13 +61,6 @@
     padding-top: 10px;
 }
 
-div.status-text {
-    padding-left: 4px;
-    line-height: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 /* view options */
 
 #view-options-container {
